<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".client.view.main.LoginActivity">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/sampleAlias"
            android:ems="10"
            android:id="@+id/registerAliasField"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameField"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password"
            android:ems="10"
            android:id="@+id/registerPasswordField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/registerAliasField"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/twitter_logo"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"/>
    <Button
            android:text="@string/upload_picture"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/uploadPictureButton"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordField"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/register"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            app:layout_constraintTop_toBottomOf="@+id/uploadPictureButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:ems="10"
            android:id="@+id/firstNameField"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            android:ems="10"
            android:id="@+id/lastNameField"
            app:layout_constraintTop_toBottomOf="@+id/firstNameField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>