<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".client.view.main.LoginActivity">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:ems="10"
            android:id="@+id/aliasField"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password"
            android:ems="10"
            android:id="@+id/passwordField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/aliasField"
            android:layout_marginTop="32dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/twitter_logo"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"/>
    <Button
            android:text="@string/log_in"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/registerQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerQuestion"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>