<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".client.view.main.StoryFragment">

            <ImageView
                    android:id="@+id/userStatusImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/userImageContentDescription"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/userStatusImage">

                <TextView
                        android:id="@+id/userStatusName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/sampleUserName"/>

                <TextView
                        android:id="@+id/userStatusAlias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/sampleAlias"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
                android:text="status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userStatusMessage"/>
    </LinearLayout>
</FrameLayout>
